<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.csi2_23.trabajoandroid.EditActivity"
    android:background="@mipmap/settings"
    android:gravity="center">

    <com.wonderkiln.blurkit.BlurLayout
        android:id="@+id/blurLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:blk_fps="5"
        android:foregroundGravity="center">

    </com.wonderkiln.blurkit.BlurLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/WhiteWithTransparency"
            android:padding="10dp">

            <TextView
                android:text="@string/txtEditAlumnID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEditAlumnId"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtAlumnId"
                android:text="0" />

            <TextView
                android:text="@string/txtEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEditName"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtName"
                android:singleLine="true"
                android:text="Peter" />

            <TextView
                android:text="@string/txtEditSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEditSurname"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtSurname"
                android:singleLine="true"
                android:text="Redfield" />

            <TextView
                android:text="@string/txtEditMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEditMail"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/edtMail"
                android:singleLine="true"
                android:text="peter@gmail.com" />

            <TextView
                android:text="@string/txtEditPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEditPhone"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/edtPhone"
                android:text="954675456" />

            <TextView
                android:text="@string/txtEditMark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEditMark"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/edtMark"
                android:text="10.0" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/txtEditSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtEditSubect"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_weight="1" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinSubject"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/btnEditOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnEditOk"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Colored" />

                <Button
                    android:text="@string/btnEditCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnEditCancel"
                    android:layout_weight="1"
                    style="@style/Base.Widget.AppCompat.Button.Colored" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>
