<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.csi2_23.trabajoandroid.LoginActivity"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="@mipmap/cropped_students_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="23dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/applogonew"
        android:id="@+id/imgLogo"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:gravity="center"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true">

        <com.wonderkiln.blurkit.BlurLayout
            android:id="@+id/blurLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:blk_fps="30"
            android:foregroundGravity="center">

        </com.wonderkiln.blurkit.BlurLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:background="@color/WhiteWithTransparency"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_centerHorizontal="true">

            <TextView
                android:text="@string/txtTitUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtTitUsername"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black"
                android:textAlignment="textStart" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtUsername"
                android:textColor="@android:color/black"
                android:textAlignment="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="41dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtTitPassword"
                    android:text="@string/txtTitPassword"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/black"
                    android:textAlignment="textStart"
                    android:layout_weight="1" />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchShow"
                    android:switchTextAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_weight="1"
                    android:switchMinWidth="32dip" />

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtPassword"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:password="true" />

            <CheckBox
                android:text="@string/chkLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chkLogin"
                android:textColor="@android:color/black" />

            <Button
                android:text="@string/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:backgroundTint="@color/colorAccent" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
